# gershwin-workspace

./: .cirrus.yml  .gitignore  CI_BRANCH_MARKER.txt  GNUmakefile  GNUmakefile.in  INSTALL  README.md  confdefs.h  configure  configure.ac  oldtests.sum  test_both.st  test_workspace_gdb.sh
.github/scripts/: dependencies.sh
.github/workflows/: build.yml  main.yml
DBKit/: DBKBTree.h  DBKBTree.m  DBKBTreeNode.h  DBKBTreeNode.m  DBKFixLenRecordsFile.h  DBKFixLenRecordsFile.m  DBKFreeNodesPage.h  DBKFreeNodesPage.m  DBKPathsTree.h  DBKPathsTree.m  DBKVarLenRecordsFile.h  DBKVarLenRecordsFile.m
DBKit/Testing/: dbtest.m  test1.m  test2.m  test3.m  test4.m  test5.m  test6.m
DSStore/: DSBuddyAllocator.h  DSBuddyAllocator.m  DSStore.h  DSStore.m  DSStoreCodecs.h  DSStoreCodecs.m  DSStoreEntry.h  DSStoreEntry.m  GNUmakefile  README.md  SimpleColor.h  SimpleColor.m  fields.md
DSStore/tools/: create_dsstore.m
FSNode/: FSNBrowser.h  FSNBrowser.m  FSNBrowserCell.h  FSNBrowserCell.m  FSNBrowserColumn.h  FSNBrowserColumn.m  FSNBrowserMatrix.h  FSNBrowserMatrix.m  FSNBrowserScroll.h  FSNBrowserScroll.m  FSNFunctions.h  FSNFunctions.m  FSNGridLayoutManager.h  FSNGridLayoutManager.m  FSNIcon.h  FSNIcon.m  FSNIconPlacement.h  FSNIconPlacement.m  FSNIconPositionStore.h  FSNIconsView.h  FSNIconsView.m  FSNListView.h  FSNListView.m  FSNMetadataProvider.h  FSNPathComponentsViewer.h  FSNPathComponentsViewer.m  FSNPlacementEnumerator.h  FSNPlacementEnumerator.m  FSNTextCell.h  FSNTextCell.m  FSNode.h  FSNode.m  FSNodeRep.h  FSNodeRep.m  FSNodeRepIcons.m  GNUmakefile  config.h.in  configure
GSMetadata/: GNUmakefile
GWMetadata/: GSAppleDouble.h  GSAppleDouble.m  GSFileMetadata.h  GSFileMetadata.m  GWMetaArchive.h  GWMetaArchive.m  GWMetaXattr.h  GWMetaXattr.m  configure
GWMetadata/MDFinder/: MDFinder.h  MDFinder.m  MDFinderInfo.plist  main.m
GWMetadata/MDKit/: MDKAttribute.h  MDKAttribute.m  MDKAttributeChooser.h  MDKAttributeChooser.m  MDKAttributeEditor.h  MDKAttributeEditor.m  MDKAttributeView.h  MDKAttributeView.m  MDKFSFilter.h  MDKFSFilter.m  MDKQuery.h  MDKQuery.m  MDKQueryManager.h  MDKQueryManager.m  MDKResultCell.h  MDKResultCell.m  MDKResultsCategory.h  MDKResultsCategory.m  MDKTableView.h  MDKTableView.m  MDKWindow.h  MDKWindow.m  SQLite.h  SQLite.m  config.h.in
GWMetadata/Preferences/: CategoriesEditor.h  CategoriesEditor.m  CategoryView.h  CategoryView.m  MDIndexing.h  MDIndexing.m  StartAppWin.m
GWMetadata/gmds/: GNUmakefile.postamble
GWorkspace/: GNUmakefile.in  GNUmakefile.preamble  GWFunctions.h  GWFunctions.m  GWorkspace.h  GWorkspace.m  GWorkspaceInfo.plist  WorkspaceApplication.m  X11AppSupport.m
GWorkspace/Desktop/: GWDesktopManager.h  GWDesktopManager.m  GWDesktopView.m  GWDesktopWindow.m
GWorkspace/FileViewer/: GWSpatialViewer.h  GWSpatialViewer.m  GWViewer.m  GWViewersManager.h  GWViewersManager.m
Inspector/: Annotations.h  Annotations.m  Attributes.h  Attributes.m  ContentViewersProtocol.h  Contents.h  Contents.m  Functions.h  GNUmakefile  GNUmakefile.in  GNUmakefile.postamble  IconView.h  IconView.m  Inspector.h  Inspector.m  TimeDateView.h  TimeDateView.m  Tools.h  Tools.m  config.h.in  configure  configure.ac
Inspector/ContentViewers/: GNUmakefile  GNUmakefile.in
Operation/: FileOpInfo.h  FileOpInfo.m  Functions.h  Functions.m  GNUmakefile  GNUmakefile.postamble  Operation.h  Operation.m
Recycler/: GNUmakefile.postamble  Recycler.m  RecyclerIcon.m  RecyclerInfo.plist  RecyclerView.m
Tests/FSNode/: GNUmakefile.preamble  t_FSNGridCellCenter.m  t_FSNIlocTransform.m
Tests/FileViewer/: GNUmakefile.preamble  t_DSStoreInfo.m  t_GWViewSettingsManager.m  t_GWViewerPrefsKeys.m  t_GWVolumeID.m
Tests/GWMetadata/: GNUmakefile.preamble  t_GSAppleDouble.m  t_GSFileMetadata.m  t_GWMetaXattr.m
Tests/StepTalk/: GNUmakefile.preamble  README.md  t_StepTalkInfoPanels.m  test_about_panels.st
Tools/: GNUmakefile  check-translations.sh  clean-strings.py  dedup-strings.py  docktest-dbus.sh  fill-translations.sh  remove-placeholders.py  translate-missing.py
Tools/BadgeTest/: GNUmakefile  main.m
Tools/ProgressTest/: GNUmakefile  main.m
Tools/appimage-icon-test/: GNUmakefile  WorkspaceStub.m  main.m
Tools/ddbd/: DDBDirsManager.h  DDBDirsManager.m  DDBMDStorage.h  DDBMDStorage.m  DDBPathsManager.h  DDBPathsManager.m  GNUmakefile  ddbd.h  ddbd.m
Tools/dsutil/: GNUmakefile  dsutil.1  dsutil.d  dsutil.m
Tools/eject/: GNUmakefile  eject.m
Tools/formatdisk-helper/: GNUmakefile  main.m
Tools/fswatcher/: GNUmakefile  GNUmakefile.in  GNUmakefile.preamble  GNUmakefile.test  fswatcher-inotify.h  fswatcher-inotify.m  fswatcher-test-client  fswatcher-test-client.d  fswatcher-test-client.m  fswatcher.h  fswatcher.m
Tools/isowrite-helper/: GNUmakefile  main.m
Tools/kdialog/: GNUmakefile  kdialog.m
Tools/lsfupdater/: FinderModulesProtocol.h  lsfupdater.m
Tools/searchtool/: searchtool.m
Tools/uitest/: GNUmakefile  README.md  TESTING_FRAMEWORK.md  Workspace+UITesting.m.example  WorkspaceUITesting.h  uitest.1  uitest.m
Tools/umount/: GNUmakefile  umount.m
Tools/wopen/: wopen.m
Workspace/: AVFSMount.h  AVFSMount.m  AppImageIconProvider.m  AppearanceMetrics.h  DBusConnection.h  DBusConnection.m  FileChooserDBusInterface.h  FileChooserDBusInterface.m  FileManagerDBusInterface.h  FileManagerDBusInterface.m  GNUmakefile  GNUmakefile.in  GNUmakefile.postamble  GNUmakefile.preamble  GSGlobalShortcutsManager.h  GSGlobalShortcutsManager.m  GWApplicationLauncher.h  GWApplicationLauncher.m  GWArchiveOperation.h  GWArchiveOperation.m  GWFunctions.h  GWFunctions.m  GWIconPositionStore.h  GWIconPositionStore.m  GWMetadataProvider.h  GWMetadataProvider.m  GWUnmountHelper.h  GWUnmountHelper.m  LowDiskWarn.h  LowDiskWarn.m  VolumeManager.h  VolumeManager.m  Workspace+UITesting.m  Workspace.h  Workspace.m  WorkspaceApplication.m  WorkspaceInfo.plist  WorkspaceUITesting.h  X11AppSupport.h  X11AppSupport.m  (+2 more)
Workspace/BootableInstaller/: BootEnvironmentDetector.h  BootEnvironmentDetector.m  BootPartitionValidator.h  BootPartitionValidator.m  BootableCopy.md  GNUmakefile  (+7 more)
(+325 files in other folders)
